# xeno

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
adapters/hyper/: Cargo.toml
adapters/hyper/src/: lib.rs
adapters/workers/: Cargo.toml
adapters/workers/src/: lib.rs
core/: Cargo.toml
core/src/: app.rs  context.rs  error.rs  extract.rs  handler.rs  lib.rs  middleware.rs  response.rs  router.rs
docs/: COMMIT.md  DESIGN.md  DESIGN_DRAFT.md  DEVELOPMENT.md  TODO.md
examples/hello-hyper/: Cargo.toml
examples/hello-hyper/src/: main.rs
examples/hello-workers/: Cargo.toml
examples/hello-workers/src/: lib.rs
tools/openapi-gen/: Cargo.toml
tools/openapi-gen/src/: main.rs
