[package]
name = "xeno-adapter-hyper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hyper adapter for the Xeno web framework"

[dependencies]
xeno-core = { path = "../../core" }
http.workspace = true
bytes.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

[dev-dependencies]
reqwest.workspace = true