[package]
name = "xeno-adapter-hyper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hyper adapter for the Xeno web framework"

[dependencies]
xeno-core = { path = "../../core" }
http.workspace = true
bytes.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest.workspace = true