[package]
name = "xeno-openapi-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenAPI generation tool for Xeno web framework"

[[bin]]
name = "xeno-openapi-gen"
path = "src/main.rs"

[dependencies]
xeno-core = { path = "../../core" }
serde.workspace = true
serde_json.workspace = true